cmake_minimum_required(VERSION 3.9...4.3.3)

# Compile all subdirectories with the same standard.
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED OFF)
set(CMAKE_CXX_EXTENSIONS OFF)

project(libcwd
        VERSION 2.0.0
        DESCRIPTION "Libcwd is a thread-safe, full-featured debugging support library for C++ developers."
        HOMEPAGE_URL "https://carlowood.github.io/libcwd/"
        LANGUAGES CXX C
)

include(CTest)

# Version info, see https://www.gnu.org/software/libtool/manual/libtool.html#Updating-library-version-information
#
# CW_INTERFACE_VERSION           : Current interface version, increment whenever the interface is changed.
# CW_INTERFACE_VERSION_REVISION  : Revision, increment every public release; or set to 0 when the interface is changed.
# CW_INTERFACE_AGE               : Increment if interfaces have been added; or set to 0 when interfaces have been removed.

# Version 2 starts with interface version 11.
set(CW_INTERFACE_VERSION 11)
set(CW_INTERFACE_VERSION_REVISION 0)
set(CW_INTERFACE_AGE 0)

#==============================================================================
# This project uses aicxx modules.
include(cmake/aicxx/Project NO_POLICY_SCOPE)

#==============================================================================
# OPTIONS

# Exit if someone tries to contaminate the source directory with an in-source build.
if (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
  message(FATAL_ERROR "Please do out-of-source builds."
                      "Cleanup: \"rm -rf CMake CMakeCache.txt CMakeFiles/\"")
endif ()

cw_option(EnableGlibCxxDebug
          "compile libcwd with -D_GLIBCXX_DEBUG. See https://gcc.gnu.org/onlinedocs/libstdc++/manual/debug_mode_using.html#debug_mode.using.mode" OFF
          "" OFF
)
cw_option(EnableLibcwdLocation
          "Enable the ability to lookup source file and line number. Turn OFF on for example non-ELF systems" ON
          "" OFF
)
cw_option(EnableLibcwdDebug
          "Enable debugging of libcwd itself" OFF
          "" OFF
)
cw_option(EnableLibcwdDebugOutput
          "Enable debug output of EnableLibcwdDebug" ON
          "OptionEnableLibcwdDebug" OFF
)
cw_option(EnableLibcwdDebugt
          "Enable debugging of threading debugging code in libcwd itself" OFF
          "OptionEnableLibcwdDebug" OFF
)
cw_option(EnableBuildTesting
          "Build test executables" ${CW_BUILD_TYPE_IS_NOT_RELEASE}
          "BUILD_TESTING" OFF
)

if (OptionEnableGlibCxxDebug)
  set(CW_CONFIG_GLIBCXX_DEBUG 1)
else ()
  set(CW_CONFIG_GLIBCXX_DEBUG 0)
endif ()
if (OptionEnableLibcwdLocation)
  set(CW_CONFIG_LOCATION 1)
else ()
  set(CW_CONFIG_LOCATION 0)
endif ()
if (OptionEnableLibcwdDebug)
  set(CW_CONFIG_DEBUG 1)
else ()
  set(CW_CONFIG_DEBUG 0)
endif ()
if (OptionEnableLibcwdDebugOutput)
  set(CW_CONFIG_DEBUGOUTPUT 1)
else ()
  set(CW_CONFIG_DEBUGOUTPUT 0)
endif ()
if (OptionEnableLibcwdDebugt)
  set(CW_CONFIG_DEBUGT 1)
else ()
  set(CW_CONFIG_DEBUGT 0)
endif ()

# Needed for include/libcwd/config.h.in
set(VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(VERSION_REVISION ${PROJECT_VERSION_PATCH})

include(CW_DEFINE_TYPE)
include(CheckPrototypeDefinition)
include(GNUInstallDirs)

include(CheckIncludeFileCXX)
check_include_file_cxx("sys/resource.h" HAVE_SYS_RESOURCE_H)
check_include_file_cxx("pwd.h" HAVE_PWD_H)

include(CheckFunctionExists)
if (CMAKE_DL_LIBS)
  set(CMAKE_REQUIRED_LIBRARIES ${CMAKE_DL_LIBS})
endif ()
check_function_exists(dlopen HAVE_DLOPEN)
check_function_exists(_dl_loaded HAVE__DL_LOADED)
check_function_exists(_rtld_global HAVE__RTLD_GLOBAL)
unset(CMAKE_REQUIRED_LIBRARIES)

if (HAVE_DLOPEN)
  set(CW_CONFIG_HAVE_DLOPEN define)
else ()
  set(CW_CONFIG_HAVE_DLOPEN undef)
endif()

check_function_exists(getegid HAVE_GETEGID)
check_function_exists(getgid HAVE_GETGID)
check_function_exists(getgroups HAVE_GETGROUPS)

if (HAVE_GETGROUPS)
  CW_DEFINE_TYPE(gid_t getgroups_t)
endif()

# Set a decent default value in case we don't have the right libraries.
if (CMAKE_SYSTEM_PROCESSOR MATCHES "sparc")
  set(CW_CONFIG_BUILTIN_RETURN_ADDRESS_OFFSET 0)
else ()
  set(CW_CONFIG_BUILTIN_RETURN_ADDRESS_OFFSET -1)
endif ()

# Needed for subst-config.h.in, then used in subdirectory utils.
set(libcwd_datadir "${CMAKE_INSTALL_FULL_DATADIR}")

configure_file("cmake-config.h.in" "config.h")
configure_file("include/libcwd/config.h.in" "include/libcwd/config.h" @ONLY)
configure_file("include/cwd_sys.h.in" "include/cwd_sys.h" @ONLY)

# Clean up rule for the above generated files and package metadata.
#
# maintainer-clean may be run repeatedly while investigating build issues.
# The rule must not fail when a previous run already removed one of these files.
add_custom_target(libcwd-maintainer-clean-extra
    COMMAND ${CMAKE_COMMAND} -E rm -f config.h include/cwd_sys.h include/libcwd/config.h
    COMMAND ${CMAKE_COMMAND} -E rm -f libcwdConfig.cmake libcwdConfigVersion.cmake libcwd.pc
    # Generated by cmake.
    COMMAND ${CMAKE_COMMAND} -E rm -f DartConfiguration.tcl
    # Generated by ctest.
    COMMAND ${CMAKE_COMMAND} -E rm -rf Testing
    COMMAND find . -name CTestTestfile.cmake -delete
    # Generated by ninja.
    COMMAND ${CMAKE_COMMAND} -E rm -f .ninja_deps
    # ctags files.
    COMMAND ${CMAKE_COMMAND} -E rm -f tags tags.vim
)

set(cwd_compile_definitions "CWDEBUG")
if (OptionEnableGlibCxxDebug)
  list(APPEND cwd_compile_definitions "_GLIBCXX_DEBUG")
endif ()

find_package(Threads REQUIRED)
find_library(LIBDW dw REQUIRED)
find_library(LIBELF elf REQUIRED)

add_subdirectory(utils)
add_subdirectory(src)
add_subdirectory(doc)

install(TARGETS cwd
  EXPORT libcwdTargets
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

# Install both checked-in public libcwd headers and generated configuration headers.
# The libcwd header tree contains nested private headers, so a directory install preserves subdirectories.
install(
  DIRECTORY
    "${CMAKE_SOURCE_DIR}/include/libcwd/"
  DESTINATION
    ${CMAKE_INSTALL_INCLUDEDIR}/libcwd
  FILES_MATCHING
    PATTERN "*.h"
)
install(
  FILES
    "${CMAKE_BINARY_DIR}/include/libcwd/config.h"
  DESTINATION
    ${CMAKE_INSTALL_INCLUDEDIR}/libcwd
)

include(CMakePackageConfigHelpers)
write_basic_package_version_file(
  "${CMAKE_CURRENT_BINARY_DIR}/libcwdConfigVersion.cmake"
  VERSION ${PROJECT_VERSION}
  COMPATIBILITY AnyNewerVersion
)

configure_file(cmake/libcwdConfig.cmake
  "${CMAKE_CURRENT_BINARY_DIR}/libcwdConfig.cmake"
  COPYONLY
)

set(ConfigPackageLocation ${CMAKE_INSTALL_LIBDIR}/cmake/libcwd)
install(EXPORT libcwdTargets
  FILE
    libcwdTargets.cmake
  NAMESPACE
    Libcwd::
  DESTINATION
    ${ConfigPackageLocation}
)
install(
  FILES
    "${CMAKE_CURRENT_BINARY_DIR}/libcwdConfig.cmake"
    "${CMAKE_CURRENT_BINARY_DIR}/libcwdConfigVersion.cmake"
  DESTINATION
    ${ConfigPackageLocation}
  COMPONENT
    Devel
)
install(
  FILES
    libcwdrc
  DESTINATION
    "${CMAKE_INSTALL_DATADIR}/libcwd"
)
install(
  FILES
    LICENSE
    README
    INSTALL
    NEWS
    README.threads
  DESTINATION
    ${CMAKE_INSTALL_DOCDIR}
)

# PkgConfig
set(prefix ${CMAKE_INSTALL_PREFIX})
set(exec_prefix \${prefix})
if (IS_ABSOLUTE "${CMAKE_INSTALL_INCLUDEDIR}")
  set(includedir ${CMAKE_INSTALL_INCLUDEDIR})
else ()
  set(includedir \${prefix}/${CMAKE_INSTALL_INCLUDEDIR})
endif ()
if (IS_ABSOLUTE "${CMAKE_INSTALL_DATADIR}")
  set(datadir ${CMAKE_INSTALL_DATADIR})
else ()
  set(datadir \${prefix}/${CMAKE_INSTALL_DATADIR})
endif ()
if (WIN32)
  set(_libcwd_pc_libdir_default ${CMAKE_INSTALL_BINDIR})
else ()
  set(_libcwd_pc_libdir_default ${CMAKE_INSTALL_LIBDIR})
endif ()
if (IS_ABSOLUTE "${_libcwd_pc_libdir_default}")
  set(libdir ${_libcwd_pc_libdir_default})
else ()
  set(libdir \${exec_prefix}/${_libcwd_pc_libdir_default})
endif ()
string (REPLACE ";" " -D" _TMP_STR "${cwd_compile_definitions}")
set(PCCFLAGS "-D${_TMP_STR}")
configure_file(${libcwd_SOURCE_DIR}/libcwd.pc.in ${libcwd_BINARY_DIR}/libcwd.pc @ONLY)
install(
  FILES
    ${CMAKE_CURRENT_BINARY_DIR}/libcwd.pc
  DESTINATION
    ${CMAKE_INSTALL_LIBDIR}/pkgconfig
)

add_subdirectory(include/threadsafe)

target_include_directories(threadsafe_ObjLib
  PUBLIC
    "${CMAKE_SOURCE_DIR}"
    "${CMAKE_SOURCE_DIR}/include"
    "${CMAKE_BINARY_DIR}/include"
)
target_compile_definitions(threadsafe_ObjLib
  PRIVATE
    ${cwd_compile_definitions}
    "-DCW_DEBUG=1"
)

if (OptionEnableBuildTesting)
  add_subdirectory(tests)
endif ()
